<resources>
    <string name="app_name">Realtor and Viewer</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Menu Options -->
    <string name="favourites">Favourites</string>
    <string name="resources">Resources</string>
    <string name="my_listings">My Listings</string>
    <string name="past_sales">My Past Sales</string>
    <string name="recommended_realtors">Rec. Realtors</string>

    <!-- Realtor Options -->
    <string name="add_listing">Add Listing</string>

    <!-- Mortgage Calculator -->
    <string name="mortgage_calculator">Mortgage Calculator</string>
    <string name="purchase_price">Purchase Price $</string>
    <string name="down_payment">Down Payment $</string>
    <string name="amortization_period">Amortization \nPeriod (In Years)</string>
    <string name="interest_rate">Interest Rate %</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="calculate_button">Calculate</string>
    <string name="profile">Profile</string>
    <string name="realtor_email">_@realtor.ca</string>

    <!-- Navigation -->
    <string name="nav_profile_button">Profile Button</string>
    <string name="nav_calculator_button">Mortgage calculator Button</string>
    <string name="nav_find_properties_button">Find Properties Button</string>
    <string name="nav_my_favourites_button">Find Properties Button</string>
    <string name="nav_find_realtors_button">Find Realtors Button</string>

    <!-- Logo -->
    <string name="logo_large">Large Logo Image</string>
    <string name="logo_medium">Medium Logo Image</string>
    <string name="logo_small">Small Logo Image</string>

    <!-- Search -->
    <string name="search_property">Property Search</string>
    <string name="search_realtor">Realtor Search</string>
    <string name="filter">Filter</string>

    <!-- User -->
    <string name="profile_picture">User Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_profile_picture">Upload a picture</string>
    <string name="company">Company</string>
    <string name="name_full">Full Name</string>
    <string name="name_first">First Name</string>
    <string name="name_last">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>

    <!-- Property -->
    <string name="property_image">Property Image</string>
    <string name="unit_number">Unit Number</string>
    <string name="house_number">House Number</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="price">Price</string>
    <string name="beds">Beds</string>
    <string name="baths">Baths</string>
    <string name="land_size">Land Size</string>
    <string name="floor_size">Floor Size</string>
    <string name="age">Age</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="property_list">Property List</string>
    <string name="description">Description</string>
    <string name="realtor">Realtor</string>
    <string name="realtor_company">Realtor\'s Company</string>

    <!-- Regular Buttons -->
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="forgot_password">Forgot Password</string>

    <!-- Register Page -->
    <string name="register_type">Register Type</string>
    <string name="register_as">Register as:</string>
    <string name="sign_up_as_realtor">As Realtor</string>
    <string name="sign_up_as_viewer">As Viewer</string>
    <string name="register_realtor">Realtor Registration</string>
    <string name="register_viewer">Viewer Registration</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>

    <!-- Forgot -->
    <string name="enter_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>


    <!-- UNSORTED BELOW HERE -->
    <string name="realtor_favourites">Realtor Favourites</string>
    <string name="find_props">Find Props</string>

    <!-- Resources -->
    <string name="listing_homes">Listing</string>
    <string name="marketing_the_property">Marketing</string>
    <string name="the_offer">The Offer</string>
    <string name="prepare_to_sell">Prep to Sell</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="finance_planning">Finances</string>
    <string name="prepare_to_buy">Prep to Buy</string>
    <string name="property_purchased">Closing the Purchase</string>
    <string name="view_properties">View Properties</string>

    <string name="text_box">Text box</string>
    <string name="update">Update</string>
    <string name="about_me">About Me</string>

    <string-array name="property_type_array">
        <item>House</item>
        <item>Apartment</item>
        <item>Townhouse</item>
        <item>Duplex</item>
        <item>Commercial</item>
    </string-array>

    <string-array name="property_title_array">
        <item>Freehold</item>
        <item>Strata</item>
    </string-array>

</resources>