<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9"
    android:backgroundTint="#D9D9D9"
    tools:context=".RealtorHome">

    <Button
        android:id="@+id/logoutBtn2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/green"
        android:text="Logout"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <ImageButton
        android:id="@+id/profileBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/nav_profile_button"
        app:layout_constraintBottom_toBottomOf="@+id/mortgageCalculatorBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mortgageCalculatorBtn"
        app:layout_constraintTop_toTopOf="@+id/mortgageCalculatorBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profileselect" />

    <ImageButton
        android:id="@+id/mortgageCalculatorBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/nav_calculator_button"
        app:layout_constraintBottom_toBottomOf="@+id/findPropertiesBtn"
        app:layout_constraintEnd_toStartOf="@+id/profileBtn"
        app:layout_constraintStart_toEndOf="@+id/findPropertiesBtn"
        app:layout_constraintTop_toTopOf="@+id/findPropertiesBtn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/calculator" />

    <ImageButton
        android:id="@+id/findRealtorBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/nav_find_realtors_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/findPropertiesBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        app:srcCompat="@drawable/realtors" />

    <ImageButton
        android:id="@+id/findPropertiesBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/nav_find_properties_button"
        app:layout_constraintBottom_toBottomOf="@+id/findRealtorBtn"
        app:layout_constraintEnd_toStartOf="@+id/mortgageCalculatorBtn"
        app:layout_constraintStart_toEndOf="@+id/findRealtorBtn"
        app:layout_constraintTop_toTopOf="@+id/findRealtorBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/properties" />

    <Button
        android:id="@+id/favouriteBtn"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="serif"
        android:text="@string/favourites"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:typeface="serif"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <Button
        android:id="@+id/myListingsBtn"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="serif"
        android:text="@string/my_listings"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:typeface="serif"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/PastSalesBtn"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="serif"
        android:text="@string/past_sales"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:typeface="serif"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/resourcesBtn"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="serif"
        android:text="@string/resources"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:typeface="serif"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/user"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_first"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/myListingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/companyNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        app:layout_constraintBottom_toTopOf="@+id/myListingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/companyNameText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/myListingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <TextView
        android:id="@+id/companyNameText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/myListingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name_last"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/myListingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/firstNameText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageButton
        android:id="@+id/editProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="608dp"
        app:layout_constraintBottom_toTopOf="@+id/profileBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/editbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>