<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Favourites">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_square"
        android:elevation="@dimen/spacing_large"
        app:layout_constraintBottom_toTopOf="@+id/content_scrolling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/favourites"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="@dimen/h1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/content_scrolling"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/spacing_medium"
            android:orientation="vertical"
            android:padding="@dimen/spacing_small"
            android:showDividers="middle">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="11dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="11dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/property_image"
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:contentDescription="@string/property_image"
                        android:padding="@dimen/spacing_small"
                        app:srcCompat="@drawable/placeholder_property" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/spacing_medium"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/first_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_slab"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/spacing_small"
                            android:text="@string/unit_number"
                            android:textAlignment="center"
                            android:textSize="@dimen/h3" />

                        <TextView
                            android:id="@+id/last_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/first_name"
                            android:fontFamily="@font/roboto_slab"
                            android:text="@string/street"
                            android:textAlignment="center"
                            android:textSize="@dimen/h3" />

                        <TextView
                            android:id="@+id/company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/first_name"
                            android:fontFamily="@font/roboto_slab"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/spacing_small"
                            android:text="@string/city"
                            android:textAlignment="center"
                            android:textSize="@dimen/h3" />

                        <TextView
                            android:id="@+id/province"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/last_name"
                            android:layout_toEndOf="@+id/company"
                            android:fontFamily="@font/roboto_slab"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/spacing_small"
                            android:text="@string/province"
                            android:textAlignment="center"
                            android:textSize="@dimen/h3" />

                        <TextView
                            android:id="@+id/postal_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/last_name"
                            android:layout_toEndOf="@+id/province"
                            android:fontFamily="@font/roboto_slab"
                            android:text="@string/postal_code"
                            android:textAlignment="center"
                            android:textSize="@dimen/h3" />

                        <TextView
                            android:id="@+id/phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/company"
                            android:fontFamily="@font/roboto_slab"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/spacing_small"
                            android:text="@string/beds"
                            android:textAlignment="center"
                            android:textSize="@dimen/h3" />

                        <TextView
                            android:id="@+id/baths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/province"
                            android:layout_toEndOf="@+id/phone_number"
                            android:fontFamily="@font/roboto_slab"
                            android:text="@string/baths"
                            android:textAlignment="center"
                            android:textSize="@dimen/h3" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/baths"
                            android:fontFamily="@font/roboto_slab"
                            android:text="@string/price"
                            android:textAlignment="center"
                            android:textSize="@dimen/h3" />

                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333333"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/nav_profile_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMortgageCalculator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/profile_select" />

        <ImageButton
            android:id="@+id/btnMortgageCalculator"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/nav_calculator_button"
            app:layout_constraintBottom_toBottomOf="@+id/btnProfile"
            app:layout_constraintEnd_toStartOf="@+id/btnProfile"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFindProperties"
            app:layout_constraintTop_toTopOf="@+id/btnProfile"
            app:srcCompat="@drawable/calculator" />

        <ImageButton
            android:id="@+id/btnFindRealtors"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/nav_find_realtors_button"
            app:layout_constraintBottom_toBottomOf="@+id/btnFindProperties"
            app:layout_constraintEnd_toStartOf="@+id/btnFindProperties"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnFindProperties"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/realtors" />

        <ImageButton
            android:id="@+id/btnFindProperties"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/nav_find_properties_button"
            app:layout_constraintBottom_toBottomOf="@+id/btnMortgageCalculator"
            app:layout_constraintEnd_toStartOf="@+id/btnMortgageCalculator"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFindRealtors"
            app:layout_constraintTop_toTopOf="@+id/btnMortgageCalculator"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/properties" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>