<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActvity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/logo_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/revlogosmall" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_rounded_textinput"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/btnRegister1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_slab"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:stateListAnimator="@null"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#A6135519"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804"
        app:strokeColor="#A6135519"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rounded_textinput"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/roboto_slab"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnRegister1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnRegister1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_slab"
        android:stateListAnimator="@null"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="#B6B6B6"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        app:strokeColor="#B6B6B6" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>